Updated SandiumClassLoader to scan for mods.